--- a/profiles/normal.ini
+++ b/profiles/normal.ini
@@ -14,4 +14,4 @@ CpuScalingGovernor=powersave
 CpuEnergyPreference=balance_performance
 CpuMaxPerf=100
 CpuMinPerf=8
-CpuNoTurbo=false
+CpuTurboEnabled=true
