Improved profile system

--- a/profiles/battery.ini
+++ b/profiles/battery.ini
@@ -1,5 +1,5 @@
 [General]
-ProfileName=Quiet
+Name=Battery
 [Temperature]
 CpuTemps=47;53;67;80;90;95;100
 GpuTemps=55;65;75;85;90;93;100
@@ -12,6 +12,6 @@ CpuMaxFreq=1500000
 CpuMinFreq=400000
 CpuScalingGovernor=powersave
 CpuEnergyPreference=power
-CpuMaxPerf=50
+CpuMaxPerf=40
 CpuMinPerf=8
 CpuTurboEnabled=false
