--- a/gui/pubspec.yaml
+++ b/gui/pubspec.yaml
@@ -21,7 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  charts_flutter: ^0.10.0
+  fl_chart: ^0.30.0
   ffi: ^1.0.0
   flutter:
     sdk: flutter
