implemented daemon service

--- a/conf/msipowercenter.desktop
+++ b/conf/msipowercenter.desktop
@@ -3,6 +3,6 @@ Type=Application
 Name=MsiPowerCenter
 Comment=A user-friendly application to manage your MSI computer
 Path=/opt/MsiPowerCenter
-Exec=pkexec /opt/MsiPowerCenter/gui
+Exec=/opt/MsiPowerCenter/gui
 Icon=/opt/MsiPowerCenter/icon.png
 Terminal=false
