--- a/gui/pubspec.yaml
+++ b/gui/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_neumorphic: ^3.1.0
+  bitsdojo_window: ^0.1.1+1
 
 dev_dependencies:
   flutter_test:
