--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0", features = ["derive"] }
 nix = "0.22.0"
 rust-ini = "0.17.0"
 signal-hook = "0.3.9"
+close-file = "0.1.0"
