--- a/gui/linux/flutter/CMakeLists.txt
+++ b/gui/linux/flutter/CMakeLists.txt
@@ -1,3 +1,4 @@
+# This file controls Flutter-level build steps. It should not be edited.
 cmake_minimum_required(VERSION 3.10)
 
 set(EPHEMERAL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/ephemeral")
@@ -24,9 +25,6 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTK REQUIRED IMPORTED_TARGET gtk+-3.0)
 pkg_check_modules(GLIB REQUIRED IMPORTED_TARGET glib-2.0)
 pkg_check_modules(GIO REQUIRED IMPORTED_TARGET gio-2.0)
-pkg_check_modules(BLKID REQUIRED IMPORTED_TARGET blkid)
-pkg_check_modules(LZMA REQUIRED IMPORTED_TARGET liblzma)
-pkg_check_modules(GCRYPT REQUIRED IMPORTED_TARGET libgcrypt)
 
 set(FLUTTER_LIBRARY "${EPHEMERAL_DIR}/libflutter_linux_gtk.so")
 
@@ -68,9 +66,6 @@ target_link_libraries(flutter INTERFACE
   PkgConfig::GTK
   PkgConfig::GLIB
   PkgConfig::GIO
-  PkgConfig::BLKID
-  PkgConfig::LZMA
-  PkgConfig::GCRYPT
 )
 add_dependencies(flutter flutter_assemble)
 
