--- a/gui/pubspec.yaml
+++ b/gui/pubspec.yaml
@@ -21,10 +21,10 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  fl_chart: ^0.45.1
-  provider:
+  fl_chart: ^0.55.2
+  provider: ^6.0.2
   ini: ^2.1.0
-  shared_preferences: any
+  shared_preferences: ^2.0.15
     
   flutter:
     sdk: flutter
@@ -32,9 +32,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   flutter_neumorphic: ^3.2.0
-  bitsdojo_window: ^0.1.1+1
+  bitsdojo_window: ^0.1.5
 
 dev_dependencies:
   flutter_test:
